Compilation fixes for 7.x