@@ -50,9 +50,9 @@ public class EqlPlugin extends Plugin implements ActionPlugin {
     @Override
     public List<Setting<?>> getSettings() {
         if (isSnapshot()) {
-            return List.of(EQL_ENABLED_SETTING);
+            return Collections.singletonList(EQL_ENABLED_SETTING);
         } else {
-            return List.of();
+            return Collections.emptyList();
         }
     }
 
